# devops-blacklist

./: Dockerfile  Dockerrun.aws.json  appspec.json  buildspec.yml  config.py  create-service.json  newrelic.ini  pyproject.toml  requirements.txt  stress_testing.py  stress_testing_v2.py  taskdef.json
.ebextensions/: environment.config
.github/workflows/: unit-tests.yml
tests/: test_unit.py
